syntax = "proto3";

package yandex.cloud.lzy.v1;

import "yandex/cloud/lzy/v1/lzy-iam.proto";
import "google/protobuf/empty.proto";

option go_package = "lzy";
option java_outer_classname = "LABS";
option java_package = "yandex.cloud.lzy.v1";

service LzyAccessBindingService {
  rpc ListAccessBindings (ListAccessBindingsRequest) returns (ListAccessBindingsResponse);

  rpc SetAccessBindings (SetAccessBindingsRequest) returns (google.protobuf.Empty);

  rpc UpdateAccessBindings (UpdateAccessBindingsRequest) returns (google.protobuf.Empty);
}

message ListAccessBindingsRequest {
  Resource resource = 1;
}

message ListAccessBindingsResponse {
  repeated AccessBinding bindings = 1;
}

message SetAccessBindingsRequest {
  Resource resource = 1;
  repeated AccessBinding bindings = 2;
}


message UpdateAccessBindingsRequest {
  Resource resource = 1;
  repeated AccessBindingDelta deltas = 2;
}
